fixed my sections with horizontal scrolling

--- a/style.scss
+++ b/style.scss
@@ -20,38 +20,46 @@
     #preferiti_settimana {
         display: flex;
         justify-content: center;
-        padding: 2.5rem 1rem;
-
+        margin-block: 3rem;
 
         .container {
-
             display: flex;
             flex-direction: column;
+            width: 90vw;
             gap: 1rem;
-
-            h2 {
-                font-size: 1rem;
+           
+            &:first-child {
+                font-size: 1.4rem;
             }
-
+            
             .container_cards {
-
                 display: flex;
-                justify-content: space-between;
                 gap: .5rem;
+                overflow-x: scroll;
 
+                &::-webkit-scrollbar {
+                    height: 5px;
+                }
+
+                &::-webkit-scrollbar-track {
+                    background-color: rgb(155, 155, 155);
+                    border-radius: 100vw;
+                }
+
+                &::-webkit-scrollbar-thumb {
+                    background-color: rgb(71, 71, 71);
+                }
+                
                 .container_card {
-
                     display: flex;
                     flex-direction: column;
                     text-decoration: none;
                     color: black;
-                    width: 30%;
                     gap: 1rem;
 
                     img {
-                        width: 100%;
-                        height: 100%;
-
+                        width: 17rem;
+                        height: 12rem;
                     }
 
                     /* ----------------------------------SECTION PREFERITI DELLA SETTIMANA */
@@ -87,18 +95,19 @@
                     }
 
                     h4 {
-                        font-size: 11px;
+                        font-size: 1rem;
+                        line-height: 2rem;
                     }
 
                     p {
-                        font-size: 10px;
-                        line-height: 13px;
+                        font-size: 13px;
+                        line-height: 1.5rem;
                     }
 
                     span {
                         font-weight: bold;
                         text-align: center;
-                        font-size: 10px;
+                        font-size: 13px;
 
                         svg {
                             height: 30%;
@@ -921,42 +930,46 @@
         justify-content: center;
         padding: 2.5rem 1rem;
 
-
         .container {
-
             display: flex;
             flex-direction: column;
+            width: 95vw;
             gap: 1rem;
-
-
-            h2 {
-                font-size: 1rem;
+           
+            &:first-child {
+                font-size:23px;
             }
-
             .container_cards {
-
                 display: flex;
-                justify-content: space-between;
                 gap: .5rem;
+                overflow-x: scroll;
 
+                &::-webkit-scrollbar {
+                    height: 5px;
+                }
+
+                &::-webkit-scrollbar-track {
+                    background-color: rgb(155, 155, 155);
+                    border-radius: 100vw;
+                }
+
+                &::-webkit-scrollbar-thumb {
+                    background-color: rgb(100, 100, 100);
+                }
+                
                 .container_card {
-
                     display: flex;
                     flex-direction: column;
                     text-decoration: none;
                     color: black;
-                    width: 30%;
                     gap: 1rem;
 
                     img {
-                        width: 100%;
-                        height: 100%;
-
+                        width: 20rem;
+                        height: 14rem;
                     }
 
-
                     /* ----------------------------------SECTION PREFERITI DELLA SETTIMANA */
-
 
                     .pref_set {
                         position: relative;
@@ -981,8 +994,6 @@
                         }
                     }
 
-
-
                     /* -------------------------------FINE SECTION PREFERITI DELLA SETTIMANA */
 
                     h4,
@@ -991,18 +1002,19 @@
                     }
 
                     h4 {
-                        font-size: 11px;
+                        font-size: 1.2rem;
+                        line-height: 2rem;
                     }
 
                     p {
-                        font-size: 10px;
-                        line-height: 13px;
+                        font-size: 12.6px;
+                        line-height: 1rem;
                     }
 
                     span {
                         font-weight: bold;
                         text-align: center;
-                        font-size: 10px;
+                        font-size: 13px;
 
                         svg {
                             height: 30%;
@@ -1867,9 +1879,9 @@
                         position: absolute;
                         display: flex;
                         gap: 1rem;
-                        height: 10%;
-                        top: 55%;
-                        left: 5%;
+                        height: 13%;
+                        top: 65%;
+                        left: 2%;
 
                         img {
                             height: 100%;
@@ -1878,7 +1890,7 @@
                     }
 
                     .logo_harry_potter {
-                        left: 47%;
+                        left: 45%;
                     }
 
                     h4,
@@ -1900,8 +1912,6 @@
                             text-decoration: underline;
                         }
                     }
-
-
                 }
             }
         }
